--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -24,24 +24,19 @@
           "Noto Color Emoji";
       }
 
-      aside {
-        background-color: var(--bs-dark-bg-subtle);
-      }
-
-      aside .list-unstyled .btn-toggle,
       aside .list-unstyled a {
-        color: var(--bs-navbar-color);
+        color: var(--bs-body-color);
         width: 100%;
         padding: .5rem 1rem .5rem 2.5rem;
         position: relative;
       }
 
-      aside .list-unstyled .bi {
+      aside .list-unstyled a .bi {
         position: absolute;
         left: 1rem;
       }
 
-      aside .list-unstyled .btn-toggle::before {
+      aside .list-unstyled a[role=button]::before {
         font-size: 12px;
         content: "\F285";
         font-family: bootstrap-icons;
@@ -50,12 +45,10 @@
         right: 1rem;
       }
 
-      aside .list-unstyled .btn-toggle[aria-expanded="true"]::before {
+      aside .list-unstyled a[role=button][aria-expanded=true]::before {
         transform: rotate(90deg);
       }
 
-      aside .list-unstyled .btn-toggle:hover,
-      aside .list-unstyled .btn-toggle:focus,
       aside .list-unstyled a:hover,
       aside .list-unstyled a:focus {
         background-color: var(--bs-secondary-bg);
@@ -136,19 +129,19 @@
     </nav>
 
     <div class="d-flex flex-grow-1" style="padding-top: 3.5rem">
-      <aside class="shadow">
+      <aside class="bg-dark-subtle shadow">
         <div class="offcanvas-md offcanvas-start h-100 overflow-hidden overflow-y-auto" tabindex="-1" id="sidebarMenu" aria-labelledby="sidebarMenuLabel" style="width: 240px">
           <div class="offcanvas-body d-md-flex flex-column p-2">
             <ul class="list-unstyled">
               <li>
-                <a href="#" class="link-body-emphasis d-inline-flex align-items-center gap-2 text-decoration-none rounded">
+                <a href="#" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded">
                   <i class="bi bi-house-door-fill"></i> Dashboard
                 </a>
               </li>
               <li>
-                <button class="btn btn-toggle d-inline-flex align-items-center gap-2 border-0" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="true">
+                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="true">
                   <i class="bi bi-gear-fill"></i> 基础设置
-                </button>
+                </a>
                 <div class="collapse show" id="base-collapse">
                   <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">商城横幅</a></li>
@@ -159,9 +152,9 @@
                 </div>
               </li>
               <li>
-                <button class="btn btn-toggle d-inline-flex align-items-center gap-2 border-0" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="true">
+                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="true">
                   <i class="bi bi-speedometer"></i> 新闻管理
-                </button>
+                </a>
                 <div class="collapse show" id="news-collapse">
                   <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">页面管理</a></li>
@@ -171,9 +164,9 @@
                 </div>
               </li>
               <li>
-                <button class="btn btn-toggle d-inline-flex align-items-center gap-2 border-0" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="true">
+                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="true">
                   <i class="bi bi-archive-fill"></i> 商家管理
-                </button>
+                </a>
                 <div class="collapse show" id="merchant-collapse">
                   <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">商家列表</a></li>
@@ -184,9 +177,9 @@
                 </div>
               </li>
               <li>
-                <button class="btn btn-toggle d-inline-flex align-items-center gap-2 border-0" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="true">
+                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="true">
                   <i class="bi bi-gear-fill"></i> 订单管理
-                </button>
+                </a>
                 <div class="collapse show" id="order-collapse">
                   <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">订单列表</a></li>
@@ -196,9 +189,9 @@
                 </div>
               </li>
               <li>
-                <button class="btn btn-toggle d-inline-flex align-items-center gap-2 border-0" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="true">
+                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="true">
                   <i class="bi bi-gear-fill"></i> 系统管理
-                </button>
+                </a>
                 <div class="collapse show" id="system-collapse">
                   <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">管理员帐号</a></li>
@@ -208,7 +201,7 @@
                 </div>
               </li>
               <li>
-                <a href="#" class="link-body-emphasis d-inline-flex align-items-center gap-2 text-decoration-none rounded">
+                <a href="#" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded">
                   <i class="bi bi-question-circle-fill"></i> 关于我们
                 </a>
               </li>
