--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -134,16 +134,16 @@
           <div class="offcanvas-body d-md-flex flex-column p-2">
             <ul class="list-unstyled">
               <li>
-                <a href="#" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded">
+                <a href="#" class="d-inline-flex align-items-center text-decoration-none rounded">
                   <i class="bi bi-house-door-fill"></i> Dashboard
                 </a>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="true">
-                  <i class="bi bi-gear-fill"></i> 基础设置
+                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="true">
+                  <i class="bi bi-gear-wide-connected"></i> 基础设置
                 </a>
                 <div class="collapse show" id="base-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                  <ul class="list-unstyled">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">商城横幅</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">分类设置</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">栏目管理</a></li>
@@ -152,11 +152,11 @@
                 </div>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="true">
+                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="true">
                   <i class="bi bi-speedometer"></i> 新闻管理
                 </a>
                 <div class="collapse show" id="news-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                  <ul class="list-unstyled">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">页面管理</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">新闻列表</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">公众号列表</a></li>
@@ -164,11 +164,11 @@
                 </div>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="true">
+                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="true">
                   <i class="bi bi-archive-fill"></i> 商家管理
                 </a>
                 <div class="collapse show" id="merchant-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                  <ul class="list-unstyled">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">商家列表</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">用户管理</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">采购订单</a></li>
@@ -177,11 +177,11 @@
                 </div>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="true">
-                  <i class="bi bi-gear-fill"></i> 订单管理
+                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="true">
+                  <i class="bi bi-cart-plus-fill"></i> 订单管理
                 </a>
                 <div class="collapse show" id="order-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                  <ul class="list-unstyled">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">订单列表</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">售后管理</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">用户投诉</a></li>
@@ -189,11 +189,11 @@
                 </div>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="true">
+                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="true">
                   <i class="bi bi-gear-fill"></i> 系统管理
                 </a>
                 <div class="collapse show" id="system-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1">
+                  <ul class="list-unstyled">
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">管理员帐号</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">校色设置</a></li>
                     <li><a href="#" class="d-inline-flex text-decoration-none rounded">菜单设置</a></li>
@@ -201,7 +201,7 @@
                 </div>
               </li>
               <li>
-                <a href="#" class="d-inline-flex align-items-center gap-2 text-decoration-none rounded">
+                <a href="#" class="d-inline-flex align-items-center text-decoration-none rounded">
                   <i class="bi bi-question-circle-fill"></i> 关于我们
                 </a>
               </li>
