refactor: Using tabindex to active focus

--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -139,7 +139,7 @@
                 </a>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="true">
+                <a role="button" tabindex="0" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="true">
                   <i class="bi bi-gear-wide-connected"></i> 基础设置
                 </a>
                 <div class="collapse show" id="base-collapse">
@@ -152,7 +152,7 @@
                 </div>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="true">
+                <a role="button" tabindex="0" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="true">
                   <i class="bi bi-speedometer"></i> 新闻管理
                 </a>
                 <div class="collapse show" id="news-collapse">
@@ -164,7 +164,7 @@
                 </div>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="true">
+                <a role="button" tabindex="0" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="true">
                   <i class="bi bi-archive-fill"></i> 商家管理
                 </a>
                 <div class="collapse show" id="merchant-collapse">
@@ -177,7 +177,7 @@
                 </div>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="true">
+                <a role="button" tabindex="0" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="true">
                   <i class="bi bi-cart-plus-fill"></i> 订单管理
                 </a>
                 <div class="collapse show" id="order-collapse">
@@ -189,7 +189,7 @@
                 </div>
               </li>
               <li>
-                <a role="button" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="true">
+                <a role="button" tabindex="0" class="d-inline-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="true">
                   <i class="bi bi-gear-fill"></i> 系统管理
                 </a>
                 <div class="collapse show" id="system-collapse">
