style: improve style

--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -66,7 +66,7 @@
         </button>
         <ul class="navbar-nav flex-row flex-wrap ms-auto">
           <li class="nav-item">
-            <a class="nav-link px-2 position-relative" href="#">
+            <a role="button" class="nav-link px-2 position-relative">
               <i class="bi bi-bell-fill"></i>
               <span class="position-absolute top-25 start-75 translate-middle p-1 bg-danger rounded-circle">
                 <span class="visually-hidden">New alerts</span>
@@ -74,7 +74,7 @@
             </a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link px-2 dropdown-toggle d-flex align-items-center" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+            <a role="button" class="nav-link px-2" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="bi bi-sun-fill"></i>
             </a>
             <ul class="dropdown-menu dropdown-menu-end position-absolute shadow">
@@ -90,14 +90,14 @@
               </li>
               <li>
                 <a class="dropdown-item d-flex align-items-center gap-2" href="#" data-bs-theme-value="auto">
-                  <i class="bi bi-circle-half""></i> Auto
+                  <i class="bi bi-circle-half"></i> Auto
                 </a>
               </li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link px-2 dropdown-toggle d-flex align-items-center" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="https://github.com/mdo.png" alt="" width="24" height="24" class="rounded-circle me-2">
+              <img src="https://github.com/mdo.png" width="24" height="24" class="rounded-circle me-2">
               Siganushka
             </a>
             <ul class="dropdown-menu dropdown-menu-end position-absolute shadow">
