--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -24,40 +24,30 @@
           "Noto Color Emoji";
       }
 
-      aside .btn {
-        --bs-btn-color: var(--bs-dark-text-emphasis);
-        --bs-btn-bg: var(--bs-dark-border-subtle);
-        --bs-btn-hover-bg: var(--bs-dark-border-subtle);
-        --bs-btn-active-bg: var(--bs-dark-border-subtle);
-        left: calc(100% - 2px);
-        transition: opacity .35s ease-in-out;
-      }
-
-      aside:hover .btn {
-        opacity: 1 !important;
+      /** Sidebar */
+      aside .offcanvas-md {
+        width: 240px !important;
       }
 
       aside .list-unstyled a {
         color: var(--bs-body-color);
-        padding: .5rem 1rem .5rem 2.75rem;
+        padding: .5rem .75rem;
         position: relative;
       }
 
-      aside .list-unstyled a .bi {
-        position: absolute;
-        left: 1rem;
+      aside .list-unstyled a + div .list-unstyled a {
+        padding-left: 2.25rem;
       }
 
-      aside .list-unstyled a[role=button]::before {
+      aside .list-unstyled a[role=button]::after {
         font-size: .875rem;
-        content: "\F285";
         font-family: bootstrap-icons;
+        margin-left: auto;
+        content: "\F285";
         transition: transform .35s ease;
-        position: absolute;
-        right: 1rem;
       }
 
-      aside .list-unstyled a[role=button][aria-expanded=true]::before {
+      aside .list-unstyled a[role=button][aria-expanded=true]::after {
         transform: rotate(90deg);
       }
 
@@ -66,6 +56,31 @@
         background-color: var(--bs-secondary-bg);
       }
 
+      /** Sidebar collapse button */
+      aside .btn {
+        --bs-btn-color: var(--bs-dark-text-emphasis);
+        --bs-btn-bg: var(--bs-dark-border-subtle);
+        --bs-btn-hover-bg: var(--bs-dark-border-subtle);
+        --bs-btn-active-bg: var(--bs-dark-border-subtle);
+        transition: opacity .35s ease-in-out;
+      }
+
+      aside:hover .btn {
+        opacity: 1 !important;
+      }
+
+      /** Sidebar collapsed */
+      aside.collapsed .offcanvas-md {
+        width: auto !important;
+      }
+ 
+      aside.collapsed .list-unstyled a span,
+      aside.collapsed .list-unstyled a + div,
+      aside.collapsed .list-unstyled a[role=button]::after {
+        display: none;
+      }
+
+      /** Sidebar scrollbar */
       aside .offcanvas-md::-webkit-scrollbar {
         width: 4px;
       }
@@ -87,7 +102,7 @@
         <a class="navbar-brand d-none d-md-block" href="#">
           <i class="bi bi-bootstrap-fill"></i> Dashboard
         </a>
-        <button class="navbar-toggler d-md-none px-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="true" aria-label="Toggle navigation">
+        <button class="navbar-toggler d-md-none px-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <ul class="navbar-nav flex-row flex-wrap ms-auto">
@@ -156,19 +171,21 @@
 
     <div class="d-flex flex-grow-1" style="padding-top: 3.5rem">
       <aside class="bg-dark-subtle position-relative shadow">
-        <div class="offcanvas-md offcanvas-start h-100 overflow-hidden overflow-y-auto" tabindex="-1" id="sidebarMenu" aria-labelledby="sidebarMenuLabel" style="width: 240px">
+        <div class="offcanvas-md offcanvas-start h-100 overflow-hidden overflow-y-auto" tabindex="-1" id="sidebarMenu" aria-labelledby="sidebarMenuLabel">
           <div class="offcanvas-body d-md-flex flex-column p-2">
-            <ul class="list-unstyled">
+            <ul class="list-unstyled m-0">
               <li>
-                <a href="#" class="d-flex align-items-center text-decoration-none rounded">
-                  <i class="bi bi-house-door-fill"></i> Dashboard
+                <a href="#" class="d-flex align-items-center text-decoration-none gap-2 rounded">
+                  <i class="bi bi-house-door-fill"></i>
+                  <span>Dashboard</span>
                 </a>
               </li>
               <li>
-                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="true">
-                  <i class="bi bi-gear-wide-connected"></i> 基础设置
+                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="false">
+                  <i class="bi bi-gear-wide-connected"></i>
+                  <span>基础设置</span>
                 </a>
-                <div class="collapse show" id="base-collapse">
+                <div class="collapse" id="base-collapse">
                   <ul class="list-unstyled">
                     <li><a href="#" class="d-flex text-decoration-none rounded">商城横幅</a></li>
                     <li><a href="#" class="d-flex text-decoration-none rounded">分类设置</a></li>
@@ -178,10 +195,11 @@
                 </div>
               </li>
               <li>
-                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="true">
-                  <i class="bi bi-speedometer"></i> 新闻管理
+                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="false">
+                  <i class="bi bi-speedometer"></i>
+                  <span>新闻管理</span>
                 </a>
-                <div class="collapse show" id="news-collapse">
+                <div class="collapse" id="news-collapse">
                   <ul class="list-unstyled">
                     <li><a href="#" class="d-flex text-decoration-none rounded">页面管理</a></li>
                     <li><a href="#" class="d-flex text-decoration-none rounded">新闻列表</a></li>
@@ -190,10 +208,11 @@
                 </div>
               </li>
               <li>
-                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="true">
-                  <i class="bi bi-archive-fill"></i> 商家管理
+                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="false">
+                  <i class="bi bi-archive-fill"></i>
+                  <span>商家管理</span>
                 </a>
-                <div class="collapse show" id="merchant-collapse">
+                <div class="collapse" id="merchant-collapse">
                   <ul class="list-unstyled">
                     <li><a href="#" class="d-flex text-decoration-none rounded">商家列表</a></li>
                     <li><a href="#" class="d-flex text-decoration-none rounded">用户管理</a></li>
@@ -203,10 +222,11 @@
                 </div>
               </li>
               <li>
-                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="true">
-                  <i class="bi bi-cart-plus-fill"></i> 订单管理
+                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="false">
+                  <i class="bi bi-cart-plus-fill"></i>
+                  <span>订单管理</span>
                 </a>
-                <div class="collapse show" id="order-collapse">
+                <div class="collapse" id="order-collapse">
                   <ul class="list-unstyled">
                     <li><a href="#" class="d-flex text-decoration-none rounded">订单列表</a></li>
                     <li><a href="#" class="d-flex text-decoration-none rounded">售后管理</a></li>
@@ -215,10 +235,11 @@
                 </div>
               </li>
               <li>
-                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none rounded" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="true">
-                  <i class="bi bi-gear-fill"></i> 系统管理
+                <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="false">
+                  <i class="bi bi-gear-fill"></i>
+                  <span>系统管理</span>
                 </a>
-                <div class="collapse show" id="system-collapse">
+                <div class="collapse" id="system-collapse">
                   <ul class="list-unstyled">
                     <li><a href="#" class="d-flex text-decoration-none rounded">管理员帐号</a></li>
                     <li><a href="#" class="d-flex text-decoration-none rounded">校色设置</a></li>
@@ -227,15 +248,16 @@
                 </div>
               </li>
               <li>
-                <a href="#" class="d-flex align-items-center text-decoration-none rounded">
-                  <i class="bi bi-question-circle-fill"></i> 关于我们
+                <a href="#" class="d-flex align-items-center text-decoration-none gap-2 rounded">
+                  <i class="bi bi-question-circle-fill"></i>
+                  <span>关于我们</span>
                 </a>
               </li>
             </ul>
           </div>
         </div>
 
-        <button tabindex="0" class="btn btn-sm border-0 rounded-circle position-absolute top-50 translate-middle shadow-sm opacity-0">
+        <button tabindex="0" class="btn btn-sm border-0 rounded-circle position-absolute top-50 start-100 translate-middle shadow-sm opacity-0">
           <i class="bi bi-chevron-left"></i>
         </button>
       </aside>
@@ -296,5 +318,15 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
+    <script>
+      const collapses = document.querySelectorAll('.collapse')
+      collapses.forEach(collapse => bootstrap.Collapse.getOrCreateInstance(collapse).toggle())
+
+      const button = document.querySelector('aside .btn')
+      button.addEventListener('click', () => {
+        const sidebar = document.querySelector('aside')
+        sidebar.classList.toggle('collapsed')
+      })
+    </script>
   </body>
 </html>
