--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -30,17 +30,17 @@
         transition: width .15s ease-in-out
       }
 
-      aside .list-unstyled a {
+      aside .offcanvas-md .list-unstyled a {
         color: var(--bs-body-color);
         padding: .5rem .75rem;
         white-space: nowrap !important;
       }
 
-      aside .list-unstyled a + div .list-unstyled a {
+      aside .offcanvas-md .list-unstyled a + div .list-unstyled a {
         padding-left: 2.25rem;
       }
 
-      aside .list-unstyled a[role=button]::after {
+      aside .offcanvas-md .list-unstyled a[role=button]::after {
         font-size: .875rem;
         font-family: bootstrap-icons;
         margin-left: auto;
@@ -48,39 +48,39 @@
         transition: transform .15s ease;
       }
 
-      aside .list-unstyled a[role=button][aria-expanded=true]::after {
+      aside .offcanvas-md .list-unstyled a[role=button][aria-expanded=true]::after {
         transform: rotate(90deg);
       }
 
-      aside .list-unstyled a:hover,
-      aside .list-unstyled a:focus {
+      aside .offcanvas-md .list-unstyled a:hover,
+      aside .offcanvas-md .list-unstyled a:focus {
         background-color: var(--bs-secondary-bg);
       }
 
-      /** Sidebar collapse button */
-      aside .btn {
-        --bs-btn-bg: var(--bs-dark-border-subtle);
+      /** Sidebar pinned button */
+      aside .btn-pinned {
+        --bs-btn-bg: var(--bs-dark-bg-subtle);
         --bs-btn-hover-bg: var(--bs-dark-border-subtle);
         --bs-btn-active-bg: var(--bs-dark-border-subtle);
         transition: opacity .15s ease-in-out, transform 0.15s ease-in-out;
       }
 
-      aside:hover .btn {
+      aside:hover .btn-pinned {
         opacity: 1 !important;
       }
 
-      /** Sidebar collapsed */
-      aside.collapsed .offcanvas-md {
+      /** Sidebar pinned */
+      aside.pinned:not(:hover) .offcanvas-md {
         width: 56px !important;
       }
 
-      aside.collapsed .btn {
+      aside.pinned .btn-pinned {
         transform: translate(-50%, -50%) rotate(180deg) !important;
       }
  
-      aside.collapsed .list-unstyled a span,
-      aside.collapsed .list-unstyled a + div,
-      aside.collapsed .list-unstyled a[role=button]::after {
+      aside.pinned:not(:hover) .offcanvas-md .list-unstyled a span,
+      aside.pinned:not(:hover) .offcanvas-md .list-unstyled a + div,
+      aside.pinned:not(:hover) .offcanvas-md .list-unstyled a[role=button]::after {
         display: none;
       }
 
@@ -91,7 +91,7 @@
 
       aside .offcanvas-md::-webkit-scrollbar-track,
       aside .offcanvas-md::-webkit-scrollbar-thumb {
-        border-radius: 50rem;
+        border-radius: var(--bs-border-radius-pill);
         background-color: var(--bs-dark-bg-subtle);
       }
 
@@ -261,7 +261,7 @@
           </div>
         </div>
 
-        <button tabindex="0" class="btn btn-sm border-0 rounded-circle position-absolute top-50 start-100 translate-middle shadow-sm opacity-0">
+        <button tabindex="0" class="btn btn-sm btn-pinned border-0 rounded-circle position-absolute top-50 start-100 translate-middle shadow opacity-0">
           <i class="bi bi-chevron-left"></i>
         </button>
       </aside>
@@ -323,14 +323,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
     <script>
-      const collapses = document.querySelectorAll('.collapse')
-      collapses.forEach(collapse => bootstrap.Collapse.getOrCreateInstance(collapse).toggle())
+      const sidebar = document.querySelector('aside')
 
-      const button = document.querySelector('aside .btn')
-      button.addEventListener('click', () => {
-        const sidebar = document.querySelector('aside')
-        sidebar.classList.toggle('collapsed')
-      })
+      const pinned = sidebar.querySelector('.btn-pinned')
+      pinned.addEventListener('click', () => sidebar.classList.toggle('pinned'))
+
+      const collapses = sidebar.querySelectorAll('.collapse')
+      collapses.forEach(item => bootstrap.Collapse.getOrCreateInstance(item).toggle())
     </script>
   </body>
 </html>
