--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -75,7 +75,7 @@
       }
 
       aside.pinned .btn-pinned {
-        transform: translate(-50%, -50%) rotate(180deg) !important;
+        transform: translate(-50%, -50%) rotate(-45deg) !important;
       }
  
       aside.pinned:not(:hover) .offcanvas-md .list-unstyled a span,
@@ -261,8 +261,8 @@
           </div>
         </div>
 
-        <button tabindex="0" class="btn btn-sm btn-pinned border-0 rounded-circle position-absolute top-50 start-100 translate-middle shadow opacity-0">
-          <i class="bi bi-chevron-left"></i>
+        <button tabindex="0" class="btn btn-sm btn-pinned border-0 rounded-circle position-absolute top-50 start-100 translate-middle shadow-sm opacity-0">
+          <i class="bi bi-pin-angle-fill"></i>
         </button>
       </aside>
 
