--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -181,13 +181,13 @@
               <li>
                 <a href="#" class="d-flex align-items-center text-decoration-none gap-2 rounded">
                   <i class="bi bi-house-door-fill"></i>
-                  <span>Dashboard</span>
+                  <span class="text-truncate">Dashboard</span>
                 </a>
               </li>
               <li>
                 <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#base-collapse" aria-expanded="false">
                   <i class="bi bi-gear-wide-connected"></i>
-                  <span>基础设置</span>
+                  <span class="text-truncate">基础设置</span>
                 </a>
                 <div class="collapse" id="base-collapse">
                   <ul class="list-unstyled">
@@ -201,7 +201,7 @@
               <li>
                 <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#news-collapse" aria-expanded="false">
                   <i class="bi bi-speedometer"></i>
-                  <span>新闻管理</span>
+                  <span class="text-truncate">新闻管理</span>
                 </a>
                 <div class="collapse" id="news-collapse">
                   <ul class="list-unstyled">
@@ -214,7 +214,7 @@
               <li>
                 <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#merchant-collapse" aria-expanded="false">
                   <i class="bi bi-archive-fill"></i>
-                  <span>商家管理</span>
+                  <span class="text-truncate">商家管理</span>
                 </a>
                 <div class="collapse" id="merchant-collapse">
                   <ul class="list-unstyled">
@@ -228,7 +228,7 @@
               <li>
                 <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#order-collapse" aria-expanded="false">
                   <i class="bi bi-cart-plus-fill"></i>
-                  <span>订单管理</span>
+                  <span class="text-truncate">订单管理</span>
                 </a>
                 <div class="collapse" id="order-collapse">
                   <ul class="list-unstyled">
@@ -241,7 +241,7 @@
               <li>
                 <a role="button" tabindex="0" class="d-flex align-items-center text-decoration-none gap-2 rounded" data-bs-toggle="collapse" data-bs-target="#system-collapse" aria-expanded="false">
                   <i class="bi bi-gear-fill"></i>
-                  <span>系统管理</span>
+                  <span class="text-truncate">系统管理</span>
                 </a>
                 <div class="collapse" id="system-collapse">
                   <ul class="list-unstyled">
@@ -254,7 +254,7 @@
               <li>
                 <a href="#" class="d-flex align-items-center text-decoration-none gap-2 rounded">
                   <i class="bi bi-question-circle-fill"></i>
-                  <span>关于我们</span>
+                  <span class="text-truncate">关于我们</span>
                 </a>
               </li>
             </ul>
