--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -173,7 +173,7 @@
       </div>
     </nav>
 
-    <div class="d-flex flex-grow-1" style="padding-top: 3.5rem">
+    <div class="d-flex flex-grow-1 overflow-hidden" style="padding-top: 3.5rem">
       <aside class="bg-dark-subtle position-relative shadow">
         <div class="offcanvas-md offcanvas-start h-100 overflow-hidden overflow-y-auto" tabindex="-1" id="sidebarMenu" aria-labelledby="sidebarMenuLabel">
           <div class="offcanvas-body d-md-flex flex-column p-2">
@@ -266,7 +266,9 @@
         </button>
       </aside>
 
-      <main class="flex-grow-1 overflow-hidden overflow-y-auto p-3">
+      <main class="flex-grow-1 overflow-auto p-3">
+        <div class="bg-light" style="width: 2000px;height: 200px"></div>
+
         <h1>欢迎来到管理后台！</h1>
         <p>这里是你的主要内容区域。</p>
         <h1>欢迎来到管理后台！</h1>
